fix overlap

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -165,6 +165,7 @@ header {
   grid-template-columns: 2fr 1fr;
   position: relative;
   isolation: isolate;
+  padding-bottom: 4rem;
 }
 
 .hero-body::after {
@@ -201,7 +202,7 @@ header {
 }
 
 .hero-reviews-content {
-  margin-top: 10%;
+  // margin-top: 10%;
   display: flex;
   flex-wrap: wrap;
   gap: 0.2rem;
